--- a/10-state-management/praktik_state_management/pubspec.yaml
+++ b/10-state-management/praktik_state_management/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.2.1
   flutter_bloc: ^8.1.5
   shared_preferences: ^2.2.3
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
   flutter_test:
